; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_revwalk.c_limit_list.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_revwalk.c_limit_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32, i64 (i32*, i32)* }
%struct.TYPE_11__ = type { i32, i32, i64 }
%struct.TYPE_12__ = type { i32* }

@SLOP = common dso_local global i32 0, align 4
@INT64_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, %struct.TYPE_10__*, i32*)* @limit_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @limit_list(i32** %0, %struct.TYPE_10__* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32**, align 8
  %6 = alloca %struct.TYPE_10__*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32**, align 8
  %14 = alloca %struct.TYPE_11__*, align 8
  store i32** %0, i32*** %5, align 8
  store %struct.TYPE_10__* %1, %struct.TYPE_10__** %6, align 8
  store i32* %2, i32** %7, align 8
  %15 = load i32, i32* @SLOP, align 4
  store i32 %15, i32* %9, align 4
  %16 = load i32, i32* @INT64_MAX, align 4
  store i32 %16, i32* %10, align 4
  %17 = load i32*, i32** %7, align 8
  store i32* %17, i32** %11, align 8
  store i32* null, i32** %12, align 8
  store i32** %12, i32*** %13, align 8
  br label %18

18:                                               ; preds = %62, %61, %43, %3
  %19 = load i32*, i32** %11, align 8
  %20 = icmp ne i32* %19, null
  br i1 %20, label %21, label %70

21:                                               ; preds = %18
  %22 = call %struct.TYPE_11__* @git_commit_list_pop(i32** %11)
  store %struct.TYPE_11__* %22, %struct.TYPE_11__** %14, align 8
  %23 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %24 = load %struct.TYPE_11__*, %struct.TYPE_11__** %14, align 8
  %25 = call i32 @add_parents_to_list(%struct.TYPE_10__* %23, %struct.TYPE_11__* %24, i32** %11)
  store i32 %25, i32* %8, align 4
  %26 = icmp slt i32 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %21
  %28 = load i32, i32* %8, align 4
  store i32 %28, i32* %4, align 4
  br label %74

29:                                               ; preds = %21
  %30 = load %struct.TYPE_11__*, %struct.TYPE_11__** %14, align 8
  %31 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %30, i32 0, i32 2
  %32 = load i64, i64* %31, align 8
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %45

34:                                               ; preds = %29
  %35 = load %struct.TYPE_11__*, %struct.TYPE_11__** %14, align 8
  %36 = call i32 @mark_parents_uninteresting(%struct.TYPE_11__* %35)
  %37 = load i32*, i32** %11, align 8
  %38 = load i32, i32* %10, align 4
  %39 = load i32, i32* %9, align 4
  %40 = call i32 @still_interesting(i32* %37, i32 %38, i32 %39)
  store i32 %40, i32* %9, align 4
  %41 = load i32, i32* %9, align 4
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %43, label %44

43:                                               ; preds = %34
  br label %18

44:                                               ; preds = %34
  br label %70

45:                                               ; preds = %29
  %46 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %47 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %46, i32 0, i32 1
  %48 = load i64 (i32*, i32)*, i64 (i32*, i32)** %47, align 8
  %49 = icmp ne i64 (i32*, i32)* %48, null
  br i1 %49, label %50, label %62

50:                                               ; preds = %45
  %51 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %52 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %51, i32 0, i32 1
  %53 = load i64 (i32*, i32)*, i64 (i32*, i32)** %52, align 8
  %54 = load %struct.TYPE_11__*, %struct.TYPE_11__** %14, align 8
  %55 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %54, i32 0, i32 1
  %56 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %57 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %56, i32 0, i32 0
  %58 = load i32, i32* %57, align 8
  %59 = call i64 %53(i32* %55, i32 %58)
  %60 = icmp ne i64 %59, 0
  br i1 %60, label %61, label %62

61:                                               ; preds = %50
  br label %18

62:                                               ; preds = %50, %45
  %63 = load %struct.TYPE_11__*, %struct.TYPE_11__** %14, align 8
  %64 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %63, i32 0, i32 0
  %65 = load i32, i32* %64, align 8
  store i32 %65, i32* %10, align 4
  %66 = load %struct.TYPE_11__*, %struct.TYPE_11__** %14, align 8
  %67 = load i32**, i32*** %13, align 8
  %68 = call %struct.TYPE_12__* @git_commit_list_insert(%struct.TYPE_11__* %66, i32** %67)
  %69 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %68, i32 0, i32 0
  store i32** %69, i32*** %13, align 8
  br label %18

70:                                               ; preds = %44, %18
  %71 = call i32 @git_commit_list_free(i32** %11)
  %72 = load i32*, i32** %12, align 8
  %73 = load i32**, i32*** %5, align 8
  store i32* %72, i32** %73, align 8
  store i32 0, i32* %4, align 4
  br label %74

74:                                               ; preds = %70, %27
  %75 = load i32, i32* %4, align 4
  ret i32 %75
}

declare dso_local %struct.TYPE_11__* @git_commit_list_pop(i32**) #1

declare dso_local i32 @add_parents_to_list(%struct.TYPE_10__*, %struct.TYPE_11__*, i32**) #1

declare dso_local i32 @mark_parents_uninteresting(%struct.TYPE_11__*) #1

declare dso_local i32 @still_interesting(i32*, i32, i32) #1

declare dso_local %struct.TYPE_12__* @git_commit_list_insert(%struct.TYPE_11__*, i32**) #1

declare dso_local i32 @git_commit_list_free(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
